--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Upload</title>
 </head>
+
 <body>
-    <h1>Upload Your File</h1>
+    <h1>Upload PDF File</h1>
     <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="file" name="file" accept=".png, .jpg, .jpeg, .pdf" required>
+        <input type="file" name="file" accept=".pdf" required>
         <button type="submit">Upload</button>
     </form>
 </body>
+
 </html>
