--- a/templates/result.html
+++ b/templates/result.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extraction Result</title>
 </head>
+
 <body>
-    <h1>Extracted Text</h1>
-    <pre>{{ text }}</pre>
-    <a href="{{ doc_path }}" download>Download Word Document</a>
+    <h1>Extracted HTML Content</h1>
+    <div>{{ text|safe }}</div>
+    <br>
+    <a href="{{ url_for('download', filename=doc_path) }}" download>Download Word Document</a>
 </body>
+
 </html>
